syntax="proto3";


option go_package="./proto";

package greet_service;

service GreetService{
    rpc SayHello(NoParam) returns (HelloResponse);
    rpc SayHelloServer(NamesList) returns (stream HelloResponse);
    rpc SayHelloClient(stream HelloRequest) returns (MessagesList);
    rpc SayHelloBiDirectional(stream HelloRequest) returns (stream HelloResponse);


}

message NoParam{};

message HelloResponse{
    string message = 1;

}
message HelloRequest{
    string name=1;
}
message NamesList{
    repeated string names = 1; 
}
message MessagesList{
    repeated string messages=1;
}